--- a/src/apresentacao/ACadastroDiscente.form
+++ b/src/apresentacao/ACadastroDiscente.form
@@ -296,6 +296,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Consultar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonConsultarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="jComboBoxSexo">
       <Events>
